Shows whether fill in the gap questions were filled correctly

--- a/pandora.scss
+++ b/pandora.scss
@@ -792,3 +792,7 @@ a.select2-search-choice-close {
 	font-size: 12px;
 	padding: 8px;
 }
+
+.y {
+	display:inline-block;
+}
